node-red/create-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
spec:
  tls:
  - hosts:
    - node-red.mycluster-fra02-b3c-4x16-0fe90473ba4992f70f85c8d8bbcd1383-0000.eu-de.containers.appdomain.cloud
    secretName: mycluster-fra02-b3c-4x16-0fe90473ba4992f70f85c8d8bbcd1383-0000
  rules:
  - host: node-red.mycluster-fra02-b3c-4x16-0fe90473ba4992f70f85c8d8bbcd1383-0000.eu-de.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: node-red
           port:
              number: 1880
